# interview

./: CMakeLists.txt  Readme.md
include/: Client.hpp  Database.hpp  Server.hpp  UI.hpp
src/: ClientApplication.cpp  Database.cpp  ServerApplication.cpp  UI.cpp
utilities/: Debug.hpp
